--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -3338,9 +3338,9 @@ li.payment-method-details > div
 	padding	: 1em;
 }
 
-li.payment-method-billing-types > div
+li.payment-method-billing-types > ul.reset
 {
-	padding-top	: 1em;
+	padding-top	: 1.5em;
 }
 
 div.payment-method-details-info span.label,
@@ -3376,27 +3376,60 @@ span.payment-method-credit-card-valid
 	font-weight	: bold;
 }
 
-div.billing-type
+li.billing-type > img
 {
-	margin		: 0.5em 0em 0.5em 0.5em;
+	margin	: 0em 0.5em;
+}
+
+li.billing-type > input
+{
+	margin	: 0em 0em 0em 0.25em;
+}
+
+li.billing-type > img,
+li.billing-type > input,
+li.billing-type > span
+{
+	vertical-align	: middle;
+}
+
+li.billing-type
+{
 	cursor		: pointer;
 	border		: solid 1px transparent;
 	position	: relative;
 	right		: -1px;
+	padding		: 0.5em;
 }
 
-div.billing-type-selected
+li.billing-type:hover
 {
-	background-color		: #FFFFFF;
 	-moz-border-radius		: 1em 0em 0em 1em;
 	-webkit-border-radius	: 1em 0em 0em 1em;
-	border-color			: #34446A #FFFFFF #34446A #34446A;
 	border-style			: solid none solid solid;
 	border-width			: 1px medium 1px 1px;
+	background-color		: #ccc;
+	border-color			: #989898;
+}
+
+li.billing-type-selected
+{
+	-moz-border-radius		: 1em 0em 0em 1em;
+	-webkit-border-radius	: 1em 0em 0em 1em;
+	border-style			: solid none solid solid;
+	border-width			: 1px medium 1px 1px;
+	background-color		: #FFFFFF;
+	border-color			: #34446A #FFFFFF #34446A #34446A;
 	z-index					: 999;
 }
 
-div.billing-type > div.billing-type-summary
+li.billing-type-selected:hover
+{
+	background-color		: #FFFFFF;
+	border-color			: #34446A #FFFFFF #34446A #34446A;
+}
+
+li.billing-type > div.billing-type-summary
 {
 	margin-left	: 1.5em;
 	margin-top	: 0.5em;
@@ -3435,13 +3468,15 @@ div.payment-methods-list
 	padding	: 1em;
 }
 
-div.payment-methods-list > div.section > div.section-content
+div.payment-methods-list > div.section > div.section-content > table.reflex
 {
-	height				: 30.5em;
-	overflow-y			: scroll;
-	border				: 1px solid black;
-	-moz-box-sizing		: border-box;
-	-webkit-box-sizing	: border-box;
+	margin	: 0em;
+	width	: 100%;
+}
+
+div.payment-methods-list > div.section > div.section-content > table.reflex > tbody > tr
+{
+	cursor	: pointer;
 }
 
 div.payment-methods-list > div.section > div.section-content > ul
@@ -3514,7 +3549,7 @@ li.payment-methods-list-item-details
 
 input[type="radio"].payment-methods-list-item-radio
 {
-	margin	: 0.5em;
+	margin-top	: 0.25em;
 }                                                        
 
 /************************ END - Choose Payment Method Popup - END ************************/
